--- a/Involvement.ipynb
+++ b/Involvement.ipynb
@@ -517,7 +517,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.sum(unfiltered_involvement<0.5)/len(unfiltered_involvement)*100, \"% of slow oscillations were detected in less than 50% of regions\")"
+    "print("%.2f of slow oscillations were detected in less than 50% of regions" %(np.sum(unfiltered_involvement<0.5)/len(unfiltered_involvement)*100)))"
    ]
   },
   {
@@ -654,7 +654,7 @@
    "source": [
     "## Plot corresponding distribution of states over brain map\n",
     "\n",
-    "One Problem still: Im ALN sind die node_mean_down_phases alle negativ, hier nicht: WARUM???"
+    "Function provided by Caglar Cakan (https://github.com/caglorithm):"
    ]
   },
   {
